修改base64加解密的实现